fixing bug, whitespace removal

--- a/src/jquery.graylog2shell.css
+++ b/src/jquery.graylog2shell.css
@@ -27,7 +27,7 @@
 .shell-loading {
   height: 16px;
   width: 16px;
-  background: url(../images/loading_shell.gif) no-repeat;
+  background: url(../images/loading-shell.gif) no-repeat;
   float: left;
   padding-right: 5px;
 }
